--- a/build.gradle
+++ b/build.gradle
@@ -323,8 +323,8 @@ dependencies {
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.8'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.20.0'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.20.0'
+    //implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.20.0'
+    //implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.20.0'
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty'
     implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.4.11'
