PCQ-1645 appInsight config changes

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ settings.gradle
 
 lombok.config
 
+lib/applicationinsights-agent-*.jar
+lib/applicationinsights.log
+
 ### STS ###
 .apt_generated
 .classpath
