--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ management:
 spring:
   application:
     name: PCQ Consolidation Service
+  config:
+    import: "optional:configtree:/mnt/secrets/pcq/"
 
 core_case_data:
   api:
