PCQ-1820 adding new case Type civil in consolidation -service

--- a/src/integrationTest/resources/application.yaml
+++ b/src/integrationTest/resources/application.yaml
@@ -94,6 +94,12 @@ service-config:
           name: pcqId
       case-type-ids:
         - Benefit
+    - service: civil-citizen-ui
+      case-field-mappings:
+        - actor: APPLICANT
+          name: pcqId
+      case-type-ids:
+        - Civil
 
 pcqBackendUrl: ${PCQ_BACKEND_URL:http://localhost:4550}
 coRelationId: PCQ Consolidation Service
