PCQ-1821 reverting back preview changes

--- a/charts/pcq-consolidation-service/values.preview.template.yaml
+++ b/charts/pcq-consolidation-service/values.preview.template.yaml
@@ -6,7 +6,7 @@ job:
     S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
     IDAM_API_URL: "https://idam-api.aat.platform.hmcts.net"
     IDAM_CLIENT_REDIRECT_URI: "https://pcq-consolidation-service-aat.service.core-compute-aat.internal/oauth2/callback"
-    CORE_CASE_DATA_API_URL: "https://ccd-data-store-api-civil-citizen-ui-pr-2218.preview.platform.****.net"
+    CORE_CASE_DATA_API_URL: "http://ccd-data-store-api-aat.service.core-compute-aat.internal"
     IDAM_CLIENT_NAME: 'pcq'
   kind: CronJob
   schedule: "*/20 * * * *"
