Upgrade dependency logback

--- a/build.gradle
+++ b/build.gradle
@@ -222,6 +222,10 @@ dependencyManagement {
             entry 'spring-cloud-starter-openfeign'
             entry 'spring-cloud-openfeign-core'
         }
+        dependencySet(group: 'ch.qos.logback', version: '1.4.14') {
+            entry 'logback-core'
+            entry 'logback-classic'
+        }
         // CVE-2021-29425
         dependency group: 'commons-io', name: 'commons-io', version: '2.15.1'
     }
