--- a/charts/pcq-consolidation-service/values.yaml
+++ b/charts/pcq-consolidation-service/values.yaml
@@ -6,6 +6,8 @@ job:
   concurrencyPolicy: Forbid
   ingressHost: pcq-consolidation-service-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
   aadIdentityName: pcq
+  spotInstances:
+    enabled: true
   environment:
     PCQ_BACKEND_URL: http://pcq-backend-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     S2S_URL: "http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
