--- a/build.gradle
+++ b/build.gradle
@@ -156,7 +156,6 @@ sonarqube {
         property "sonar.projectName", "Reform :: pcq-consolidation-service"
         property "sonar.projectKey", "uk.gov.hmcts.reform:pcq-consolidation-service"
         property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
-        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
         property "sonar.pitest.mode", "reuseReport"
         property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     }
@@ -214,17 +213,12 @@ dependencyManagement {
             entry 'netty-transport-classes-epoll'
             entry 'netty-transport-classes-kqueue'
         }
-        dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
         dependencySet(group: 'com.github.jknack', version: '4.4.0') {
             entry 'handlebars'
         }
         dependencySet(group: 'org.springframework.cloud', version: '4.1.2') {
             entry 'spring-cloud-starter-openfeign'
             entry 'spring-cloud-openfeign-core'
-        }
-        dependencySet(group: 'ch.qos.logback', version: '1.5.6') {
-            entry 'logback-core'
-            entry 'logback-classic'
         }
         // CVE-2021-29425
         dependency group: 'commons-io', name: 'commons-io', version: '2.16.1'
@@ -243,62 +237,34 @@ repositories {
 }
 
 def versions = [
-        jjwt                : '0.12.5',
         junit               : '5.9.2',
         reformLogging       : '6.1.4',
         springBoot          : springBoot.class.package.implementationVersion,
-        springfoxSwagger    : '3.0.0',
         restAssured         : '5.4.0',
         lombok              : '1.18.32',
         pitest              : '1.16.1',
         sonarPitest         : '0.5'
 ]
 
-configurations.all {
-    resolutionStrategy {
-        eachDependency { DependencyResolveDetails details ->
-            if (details.requested.group in ['org.apache.logging.log4j']) {
-                details.useVersion '2.20.0'
-            }
-            if (details.requested.group in ['org.scala-lang']) {
-                details.useVersion '2.12.10'
-            }
-            if (details.requested.group in ['org.apache.httpcomponents.httpclient']) {
-                details.useVersion '4.5.13'
-            }
-            if (details.requested.group in ['org.eclipse.jetty']) {
-                details.useVersion '9.4.43.v20210629'
-            }
-        }
-    }
-}
-
 dependencies {
-    // exclude spring-cloud-context as it is already included in spring-cloud-starter-netflix-hystrix
-    def withoutSpringCloudContext = {
-        exclude group: 'org.springframework.cloud', module: 'spring-cloud-context'
-    }
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', {
-        exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-websocket'
-        exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-core'
-    }
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web-services'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
     implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.2'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '4.1.3'
+
+    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.2'
 
     implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     implementation group: "com.networknt", name: "json-schema-validator", version: "1.4.0"
 
     implementation group: 'io.github.openfeign.form', name: 'feign-form', version: '3.8.0'
     implementation group: 'io.github.openfeign.form', name: 'feign-form-spring', version: '3.8.0'
-    implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
     implementation group: 'commons-net', name: 'commons-net', version: '3.11.0'
 
@@ -314,17 +280,9 @@ dependencies {
 
     implementation group: 'net.minidev', name: 'json-smart', version: '2.5.1'
 
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty'
-
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.24'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.1.24'
-
     testImplementation(platform(group: 'org.junit', name: 'junit-bom', version: '5.10.2'))
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
-        exclude group: 'junit', module: 'junit'
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
     testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
     testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.15.0'
@@ -342,10 +300,6 @@ dependencies {
 
     testImplementation 'com.github.hmcts:fortify-client:1.4.2:all'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
-
-    testImplementation group: "io.jsonwebtoken", name: "jjwt-api", version: versions.jjwt
-    testImplementation group: "io.jsonwebtoken", name: "jjwt-impl", version: versions.jjwt
-    testImplementation group: 'io.jsonwebtoken', name: 'jjwt-gson', version: versions.jjwt
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
