--- a/build.gradle
+++ b/build.gradle
@@ -232,7 +232,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven {
-        url 'https://jitpack.io'
+        url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
     }
 }
 
@@ -272,9 +272,9 @@ dependencies {
     implementation group: 'com.microsoft.azure', name: 'applicationinsights-web', version: '3.7.2'
 
     implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.4'
-    implementation group: 'com.github.hmcts', name: 'ccd-client', version: '5.1.0'
+    implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '5.1.0'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
-    implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.2.5'
+    implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.3.1'
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.2'
 
     implementation group: 'net.minidev', name: 'json-smart', version: '2.5.2'
@@ -294,9 +294,9 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.17.0'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.3'
 
-    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '3.6.0'
+    testImplementation group: 'org.wiremock', name: 'wiremock', version: '3.6.0'
 
-    testImplementation 'com.github.hmcts:fortify-client:1.4.8:all'
+    testImplementation 'com.github.hmcts:fortify-client:1.4.9:all'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
